tests/unit/elastx/resources/capi/sc/falco/podsecuritypolicy.yaml
---
# Source: podsecuritypolicies/templates/custom/mutations/privilege-escalation.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-falco-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.containers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/custom/mutations/privilege-escalation.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-falco-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.ephemeralContainers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/custom/mutations/privilege-escalation.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-falco-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.initContainers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/custom/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-falco-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.containers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/custom/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-falco-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.ephemeralContainers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/custom/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-falco-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  location: "spec.initContainers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/fsgroup.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: fsgroup-falco-restricted
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.securityContext.fsGroup"
  parameters:
    assign:
      value: 1
    pathTests:
      - subPath: "spec.securityContext.fsGroup"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/host-ipc.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: host-ipc-falco-restricted
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.hostIPC"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.hostIPC"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/host-pid.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: host-pid-falco-restricted
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.hostPID"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.hostPID"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privilege-escalation.yaml
---
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.containers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privilege-escalation.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.ephemeralContainers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privilege-escalation.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privilege-escalation-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.initContainers[name: *].securityContext.allowPrivilegeEscalation"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.allowPrivilegeEscalation"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.containers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.ephemeralContainers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/privileged.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: privileged-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.initContainers[name: *].securityContext.privileged"
  parameters:
    assign:
      value: false
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.privileged"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-group.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-group-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.containers[name: *].securityContext.runAsGroup"
  parameters:
    assign:
      value: 1
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.runAsGroup"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-group.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-group-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.ephemeralContainers[name: *].securityContext.runAsGroup"
  parameters:
    assign:
      value: 1
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.runAsGroup"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-group.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-group-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.initContainers[name: *].securityContext.runAsGroup"
  parameters:
    assign:
      value: 1
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.runAsGroup"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-non-root.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-non-root-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.containers[name: *].securityContext.runAsNonRoot"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.runAsNonRoot"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-non-root.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-non-root-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.ephemeralContainers[name: *].securityContext.runAsNonRoot"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.runAsNonRoot"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/run-as-non-root.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: run-as-non-root-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  location: "spec.initContainers[name: *].securityContext.runAsNonRoot"
  parameters:
    assign:
      value: true
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.runAsNonRoot"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/seccomp-profile.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: seccomp-profile-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.securityContext.seccompProfile.type"
  parameters:
    assign:
      value: RuntimeDefault
    pathTests:
      - subPath: "spec.securityContext.seccompProfile.type"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/seccomp-profile.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: seccomp-profile-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.ephemeralContainers[name: *].securityContext.seccompProfile.type"
  parameters:
    assign:
      value: RuntimeDefault
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.seccompProfile.type"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/seccomp-profile.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: Assign
metadata:
  name: seccomp-profile-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.initContainers[name: *].securityContext.seccompProfile.type"
  parameters:
    assign:
      value: RuntimeDefault
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.seccompProfile.type"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/privilege-escalation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: privilege-escalation-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
---
# Source: podsecuritypolicies/templates/custom/users.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: users-falco-falco
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  parameters:
    runAsUser:
      rule: RunAsAny
    runAsGroup:
      rule: RunAsAny
    supplementalGroups:
      rule: RunAsAny
    fsGroup:
      rule: RunAsAny
---
# Source: podsecuritypolicies/templates/default/users.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: users-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
    runAsGroup:
      rule: RunAsAny
    supplementalGroups:
      rule: RunAsAny
    fsGroup:
      rule: RunAsAny
---
# Source: podsecuritypolicies/templates/default/capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  parameters:
    requiredDropCapabilities:
      - ALL
---
# Source: podsecuritypolicies/templates/default/sysctls.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPForbiddenSysctls
metadata:
  name: sysctls-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  parameters:
    allowedSysctls: []
    forbiddenSysctls:
      - "*"
---
# Source: podsecuritypolicies/templates/custom/host-paths.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: host-paths-falco-falco
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  parameters:
    allowedHostPaths:
      - pathPrefix: /boot
      - pathPrefix: /lib/modules
      - pathPrefix: /usr
      - pathPrefix: /etc
      - pathPrefix: /dev
      - pathPrefix: /sys/module
      - pathPrefix: /var/run/
      - pathPrefix: /run/containerd/
      - pathPrefix: /run/crio/
      - pathPrefix: /proc
      - pathPrefix: /var/run/falco
---
# Source: podsecuritypolicies/templates/default/host-paths.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: host-paths-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  parameters:
    allowedHostPaths: []
---
# Source: podsecuritypolicies/templates/default/host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: host-namespace-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
---
# Source: podsecuritypolicies/templates/default/host-network-ports.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: host-network-ports-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  parameters:
    hostNetwork: false
    min: 0
    max: 0
---
# Source: podsecuritypolicies/templates/default/privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: privileged-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
---
# Source: podsecuritypolicies/templates/custom/volumes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: volumes-falco-falco
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - falco
    labelSelector:
      matchLabels:
        app.kubernetes.io/name: falco
  parameters:
    volumes:
      - configMap
      - hostPath
      - projected
      - emptyDir
---
# Source: podsecuritypolicies/templates/default/volumes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: volumes-falco-restricted
spec:
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
    labelSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - "falco"
  parameters:
    volumes:
      - configMap
      - downwardAPI
      - emptyDir
      - persistentVolumeClaim
      - projected
      - secret
---
# Source: podsecuritypolicies/templates/default/mutations/capabilities.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: ModifySet
metadata:
  name: capabilities-falco-restricted-container
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.containers[name: *].securityContext.capabilities.drop"
  parameters:
    values:
      fromList:
        - ALL
    pathTests:
      - subPath: "spec.containers[name: *].securityContext.capabilities.drop"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/capabilities.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: ModifySet
metadata:
  name: capabilities-falco-restricted-ephemeral
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.ephemeralContainers[name: *].securityContext.capabilities.drop"
  parameters:
    values:
      fromList:
        - ALL
    pathTests:
      - subPath: "spec.ephemeralContainers[name: *].securityContext.capabilities.drop"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/capabilities.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: ModifySet
metadata:
  name: capabilities-falco-restricted-init
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.initContainers[name: *].securityContext.capabilities.drop"
  parameters:
    values:
      fromList:
        - ALL
    pathTests:
      - subPath: "spec.initContainers[name: *].securityContext.capabilities.drop"
        condition: MustNotExist
---
# Source: podsecuritypolicies/templates/default/mutations/supplemental-groups.yaml
apiVersion: mutations.gatekeeper.sh/v1
kind: ModifySet
metadata:
  name: supplemental-groups-falco-restricted
spec:
  applyTo:
    - groups: [""]
      kinds: ["Pod"]
      versions: ["v1"]
  match:
    scope: Namespaced
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - falco
  location: "spec.securityContext.supplementalGroups"
  parameters:
    values:
      fromList:
        - 1
    pathTests:
      - subPath: "spec.securityContext.supplementalGroups"
        condition: MustNotExist
